# bundlemanager_bundle_tool

./: BUILD.gn  OAT.xml  README.en.md  README.md  README_zh.md  bundle.json  bundletool.gni
frameworks/: BUILD.gn
frameworks/include/: bundle_command.h  bundle_command_common.h  bundle_test_tool.h  quick_fix_command.h  shell_command.h  status_receiver_impl.h
frameworks/src/: bundle_command.cpp  bundle_command_common.cpp  bundle_test_tool.cpp  main.cpp  quick_fix_command.cpp  quick_fix_status_callback_host_impl.cpp  shell_command.cpp  status_receiver_impl.cpp
ohos_bm/: BUILD.gn  config.json
ohos_bm/docs/: readme.md
ohos_bm/include/: bundle_command.h  bundle_command_common.h  error_code_utils.h  shell_command.h  status_receiver_impl.h
ohos_bm/src/: bundle_command.cpp  bundle_command_common.cpp  error_code_utils.cpp  main.cpp  shell_command.cpp  status_receiver_impl.cpp
ohos_bm/test/: BUILD.gn
ohos_bm/test/unittest/: ohos_bm_command_test.cpp
test/: BUILD.gn
test/mock/: mock_bundle_installer_host.cpp  mock_bundle_installer_host.h  mock_bundle_mgr_host.cpp  mock_bundle_mgr_host.h
test/moduletest/bm/: BUILD.gn  bm_command_dump_module_test.cpp  bm_command_install_module_test.cpp  bm_command_uninstall_module_test.cpp
test/sceneProject/: BUILD.gn
test/sceneProject/tools/: BUILD.gn
test/sceneProject/tools/bm/: BUILD.gn
test/sceneProject/tools/bm/pageAbilityBundleForInstall/: BUILD.gn  com.ohos.tools.pageAbilityBundleForInstall.p7b
test/sceneProject/tools/bm/pageAbilityBundleForUninstall/: BUILD.gn  com.ohos.tools.pageAbilityBundleForUninstall.p7b
test/sceneProject/tools/bm/test_app_one/: BUILD.gn  oh-package-lock.json5  oh-package.json5
test/sceneProject/tools/bm/test_app_one/AppScope/: app.json5
test/sceneProject/tools/bm/test_app_one/AppScope/resources/base/element/: string.json
test/sceneProject/tools/bm/test_app_one/entry/: build-profile.json5  oh-package.json5
test/sceneProject/tools/bm/test_app_one/entry/src/main/: module.json5
test/sceneProject/tools/bm/test_app_one/entry/src/main/ets/mainability/: MainAbility.ts
test/sceneProject/tools/bm/test_app_one/entry/src/main/ets/pages/: powerDialog.ets
test/sceneProject/tools/bm/test_app_one/entry/src/main/resources/base/element/: string.json
test/sceneProject/tools/bm/test_app_one/entry/src/main/resources/base/profile/: main_pages.json
test/sceneProject/tools/bm/test_app_one/hvigor/: hvigor-config.json5
test/sceneProject/tools/bm/test_app_one/oh_modules/.ohpm/@ohos+hypium@1.0.6/oh_modules/@ohos/hypium/: index.d.ts  index.js
test/sceneProject/tools/bm/test_app_one/oh_modules/.ohpm/@ohos+hypium@1.0.6/oh_modules/@ohos/hypium/src/main/: Constant.js  core.js  event.js  interface.js  service.js
test/sceneProject/tools/bm/test_app_one/oh_modules/.ohpm/@ohos+hypium@1.0.6/oh_modules/@ohos/hypium/src/main/module/assert/: ExpectExtend.js  assertClose.js  assertContain.js  assertFail.js  assertFalse.js  assertInstanceOf.js  assertLarger.js  assertLargerOrEqual.js  assertLess.js  assertLessOrEqual.js  assertNaN.js  assertNegUnlimited.js  assertNull.js  assertPosUnlimited.js  assertPromiseIsPending.js  assertPromiseIsRejected.js  assertPromiseIsRejectedWith.js  assertPromiseIsRejectedWithError.js  assertPromiseIsResolved.js  assertPromiseIsResolvedWith.js  assertThrowError.js  assertUndefined.js  isPromiseLike.js
test/sceneProject/tools/bm/test_app_one/oh_modules/.ohpm/@ohos+hypium@1.0.6/oh_modules/@ohos/hypium/src/main/module/assert/deepEquals/: DeepTypeUtils.js  assertDeepEquals.js
test/sceneProject/tools/bm/test_app_one/oh_modules/.ohpm/@ohos+hypium@1.0.6/oh_modules/@ohos/hypium/src/main/module/config/: DataDriver.js  Filter.js  configService.js
test/sceneProject/tools/bm/test_app_one/oh_modules/.ohpm/@ohos+hypium@1.0.6/oh_modules/@ohos/hypium/src/main/module/coverage/: coverageCollect.js
test/sceneProject/tools/bm/test_app_one/oh_modules/.ohpm/@ohos+hypium@1.0.6/oh_modules/@ohos/hypium/src/main/module/kit/: SysTestKit.js
test/sceneProject/tools/bm/test_app_one/oh_modules/.ohpm/@ohos+hypium@1.0.6/oh_modules/@ohos/hypium/src/main/module/mock/: ArgumentMatchers.js  ExtendInterface.js  MockKit.js  VerificationMode.js
test/sceneProject/tools/bm/test_app_one/oh_modules/.ohpm/@ohos+hypium@1.0.6/oh_modules/@ohos/hypium/src/main/module/report/: OhReport.js  ReportExtend.js
test/sceneProject/tools/bm/test_app_one/signature/: openharmony_sx.p7b
test/sceneProject/tools/ohos_test/: BUILD.gn  ohos_test.xml
test/systemtest/bm/: BUILD.gn  bm_command_dump_system_test.cpp  bm_command_install_system_test.cpp  bm_command_uninstall_system_test.cpp
test/systemtest/bm/ohos_test/: BUILD.gn  ohos_test.xml
test/systemtest/bm/pageAbilityBundleForInstall/: BUILD.gn
test/systemtest/bm/pageAbilityBundleForUninstall/: BUILD.gn
test/unittest/bm/: BUILD.gn  bm_command_dump_dependencies_test.cpp  bm_command_dump_test.cpp  bm_command_install_test.cpp  bm_command_overlay_test.cpp  bm_command_quickfix_test.cpp  bm_command_test.cpp  bm_command_uninstall_test.cpp  bundle_test_tool_cache_stat_test.cpp
