# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../bundletool.gni")

config("tools_ohos_bm_config") {
  include_dirs = [
    "include",
  ]

  defines = [
    "APP_LOG_TAG = \"OHOS_BMSTool\"",
    "LOG_DOMAIN = 0xD001123",
  ]
}

ohos_source_set("tools_ohos_bm_source_set") {
  branch_protector_ret = "pac_ret"

  sanitize = {
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
    integer_overflow = true
    ubsan = true
  }

  sources = [
    "src/bundle_command.cpp",
    "src/bundle_command_common.cpp",
    "src/error_code_utils.cpp",
    "src/main.cpp",
    "src/shell_command.cpp",
    "src/status_receiver_impl.cpp",
  ]

  public_configs = [ ":tools_ohos_bm_config" ]

  cflags = [ "-fstack-protector-strong" ]
  cflags_cc = cflags

  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }

  external_deps = [
    "ability_base:want",
    "ability_runtime:app_manager",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "bundle_framework:bundle_tool_libs",
    "bundle_framework:bundle_napi_common",
    "bundle_framework:libappexecfwk_common",
    "c_utils:utils",
    "hilog:libhilog",
    "init:libbegetutil",
    "ipc:ipc_core",
    "json:nlohmann_json_static",
    "samgr:samgr_proxy",
  ]

  defines = []
  if (account_enable_bm) {
    external_deps += [ "os_account:os_account_innerkits" ]
    defines += [ "ACCOUNT_ENABLE" ]
  }

  subsystem_name = "bundlemanager"
  part_name = "bundle_tool"
}

ohos_executable("ohos-bm") {
  deps = [ ":tools_ohos_bm_source_set" ]
  external_deps = [ "hilog:libhilog" ]

  install_enable = false

  subsystem_name = "bundlemanager"
  part_name = "bundle_tool"
}

group("cli_tools_bm") {
  deps = [
    ":ohos-bm",
  ]
}
